update env + fix missing value issue in concat

--- a/Process_WOA2018.ipynb
+++ b/Process_WOA2018.ipynb
@@ -9,8 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import xarray as xr\n",
@@ -24,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -40,8 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "url_temp_1deg = 'https://www.ncei.noaa.gov/thredds-ocean/dodsC/ncei/woa/temperature/decav/1.00/'\n",
@@ -60,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def roll_lon_to_0360(da, axis=0, res=1):\n",
@@ -82,8 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def build_woa_TPOT_S_dataset(period=0,\n",
@@ -109,8 +119,8 @@
     "    woa18_ts = xr.Dataset()\n",
     "    woa18_ts['lon'] = roll_lon_to_0360(woa18_t['lon'], res=resolution)\n",
     "    woa18_ts['lon_bnds'] = roll_lon_to_0360(woa18_t['lon_bnds'], res=resolution)\n",
-    "    woa18_ts['ptemp'] = roll_to_0360(ptemp, res=resolution)\n",
-    "    woa18_ts['salt'] = roll_to_0360(woa18_s['s_an'], res=resolution)\n",
+    "    woa18_ts['ptemp'] = roll_to_0360(ptemp, res=resolution).fillna(1.0e+20)\n",
+    "    woa18_ts['salt'] = roll_to_0360(woa18_s['s_an'], res=resolution).fillna(1.0e+20)\n",
     "    for var in ['time', 'lat_bnds', 'depth_bnds', 'nbounds']:\n",
     "        woa18_ts[var] = woa18_t[var]\n",
     "    woa18_ts.set_coords(['time', 'lon', 'lat', 'depth', 'nbounds'])\n",
@@ -120,8 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def vertical_blend(ds_annual, ds_monthly):\n",
@@ -129,7 +141,7 @@
     "\n",
     "    ds_annual[\"time\"] = ds_monthly[\"time\"]\n",
     "    ds_blend = xr.Dataset()\n",
-    "    ds_blend = xr.concat([ds_monthly, ds_annual.isel(depth=slice(57,102))], dim='depth')\n",
+    "    ds_blend = xr.concat([ds_monthly, ds_annual.isel(depth=slice(57,102))], dim='depth', fill_value=1.0e+20)\n",
     "    # fix lon/lat bounds\n",
     "    for var in [\"lon_bnds\", \"lat_bnds\"]:\n",
     "        ds_blend[var] = ds_annual[var]\n",
@@ -138,11 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "def vertical_remap(ds, depth_tgt, depth_bnds_tgt):\n",
+    "def vertical_remap(ds, depth_tgt, depth_bnds_tgt, spval=1.0e+20):\n",
     "    \"\"\" remap ptemp and salt on the new vertical grid \"\"\"\n",
     "    # re-arange depth bounds for WOA18\n",
     "    depth_bnds_src = utils.bounds_2d_to_1d(ds['depth_bnds'])\n",
@@ -151,10 +165,12 @@
     "    remapping = conserve.create_remapping_matrix(depth_bnds_src, depth_bnds_tgt, strict=False)\n",
     "    \n",
     "    # Remap the data (needs to squeeze time then re-expand array)\n",
-    "    ptemp_remapped = conserve.vertical_remap_z2z(ds['ptemp'].squeeze(dim='time').values, remapping)\n",
+    "    ptemp_array = ds['ptemp'].where(ds['ptemp'] != spval).squeeze(dim='time').values\n",
+    "    ptemp_remapped = conserve.vertical_remap_z2z(ptemp_array, remapping)\n",
     "    ptemp_remapped = np.expand_dims(ptemp_remapped, axis=0)\n",
     "    \n",
-    "    salt_remapped = conserve.vertical_remap_z2z(ds['salt'].squeeze(dim='time').values, remapping)\n",
+    "    salt_array = ds['salt'].where(ds['salt'] != spval).squeeze(dim='time').values\n",
+    "    salt_remapped = conserve.vertical_remap_z2z(salt_array, remapping)\n",
     "    salt_remapped = np.expand_dims(salt_remapped, axis=0)\n",
     "    \n",
     "    ds_remapped = xr.Dataset()\n",
@@ -173,8 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def concat_monthly(filepattern, fileout, format='NETCDF3_64BIT'):\n",
@@ -216,8 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "depth_tgt = np.array([2.5000e+00, 1.0000e+01, 2.0000e+01, 3.2500e+01, 5.1250e+01,\n",
@@ -239,13 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### 1 degree grid\n",
     "\n",
-    "nckwargs = dict(format='NETCDF3_64BIT')\n",
+    "nckwargs = dict(format='NETCDF3_64BIT',\n",
+    "                encoding={\"ptemp\": {\"_FillValue\": 1.0e+20},\n",
+    "                          \"salt\": {\"_FillValue\": 1.0e+20}})\n",
     "\n",
     "#--- Annual\n",
     "# original data with potential temperature\n",
@@ -265,7 +289,7 @@
     "    time.sleep(2)\n",
     "    # blend with annual under 1500 meters\n",
     "    ds_monthly_blend = vertical_blend(ds_annual, ds_monthly)\n",
-    "    ds_monthly_blend.to_netcdf(f'WOA18_decav_TPOTS_m{str(period).zfill(2)}_fulldepth_01.nc')\n",
+    "    ds_monthly_blend.to_netcdf(f'WOA18_decav_TPOTS_m{str(period).zfill(2)}_fulldepth_01.nc', **nckwargs)\n",
     "    time.sleep(2)\n",
     "    # vertical remap to 35 levels\n",
     "    ds_monthly_remap = vertical_remap(ds_monthly_blend, depth_tgt, depth_bnds_tgt)\n",
@@ -275,8 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## concatenate the files\n",
@@ -288,8 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "### 0.25 degree grid\n",
@@ -328,8 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "## concatenate the files\n",
@@ -363,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
