fix bug in call seawater

--- a/Process_WOA2018.ipynb
+++ b/Process_WOA2018.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -110,7 +110,7 @@
     "    woa18_s = xr.open_dataset(f'{url_salt}/woa18_decav_s{cperiod}_{cres}.nc', **kwargs)\n",
     "    \n",
     "    # compute potential temperature\n",
-    "    p = xr.apply_ufunc(seawater.eos80.pres, woa18_t.depth, woa18_t.t_an, dask='parallelized',\n",
+    "    p = xr.apply_ufunc(seawater.eos80.pres, woa18_t.depth, woa18_t.lat, dask='parallelized',\n",
     "                       output_dtypes=[woa18_t.t_an.dtype])\n",
     "    ptemp = xr.apply_ufunc(seawater.eos80.ptmp, woa18_s.s_an, woa18_t.t_an, p, dask='parallelized',\n",
     "                           output_dtypes=[woa18_t.t_an.dtype])\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
